refactor(core): simplify code using modern Java features
- Replaced `.isPresent()` checks with `.isEmpty()` for improved readability.
- Simplified folder and inventory field access by migrating to record classes.
- Streamlined JSON field handling by extracting logic into utility methods.
- Updated URLs to use HTTPS for better security.
- Optimized lambda expressions with modern stream API methods like `toList()`.